# Combat-Sports-Platform

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci.yml  docker-build.yml
apps/ai-service/: Dockerfile  main.py  pyproject.toml
apps/ai-service/app/: __init__.py
apps/ai-service/app/core/: llm_router.py
apps/ai-service/app/routers/: analysis.py  matchmaker.py  rankings.py  search.py
apps/api-gateway/: Dockerfile  package.json  tsconfig.json
apps/api-gateway/src/: index.ts
apps/api-gateway/src/routes/: fighters.ts  rankings.ts  search.ts
apps/realtime-service/: Dockerfile  package.json  tsconfig.json
apps/realtime-service/src/: index.ts
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
infra/helm/ai-service/: Chart.yaml  values.yaml
infra/helm/api-gateway/: Chart.yaml  values.yaml
infra/helm/web/: Chart.yaml  values.yaml
infra/k8s/: namespace.yaml
infra/k8s/argocd/: app-of-apps.yaml  install-notes.md
infra/observability/: prometheus.yml
infra/terraform/: README.md  cloudflare.tf  gce.tf  main.tf  outputs.tf  variables.tf
